objects/vlocity_cmt__StringTranslation__c.object
<CustomObject>
    <description>This object stores translation for Vlocity String object.</description>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsTranslated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field keep track of translation</description>
        <label>Is Translated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LocaleCode__c</fullName>
        <description>This field keeps locale code for the translation</description>
        <label>Locale Code</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_cmt__VlocityLocaleCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StringId__c</fullName>
        <label>Vlocity String</label>
        <referenceTo>vlocity_cmt__String__c</referenceTo>
        <relationshipLabel>Vlocity String Translations</relationshipLabel>
        <relationshipName>VlocityStringTranslations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Translation__c</fullName>
        <description>This field holds the translation for a given string and locale code</description>
        <label>Translation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Vlocity String Translation</label>
    <nameField>
        <label>Translation Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity String Translations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>